--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "cookie-session": "^2.0.0-alpha.1",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
+    "knex": "^0.10.0",
     "morgan": "~1.6.1",
+    "pg": "^4.5.3",
     "serve-favicon": "~2.3.0"
   }
 }
