--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.5",
     "cookie-session": "^2.0.0-alpha.1",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
     "knex": "^0.10.0",
