--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "knex": "^0.10.0",
     "morgan": "~1.6.1",
     "pg": "^4.5.3",
+    "sendgrid": "^2.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
