users get confirmation email when they signup

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.1",
+    "grunt-contrib-handlebars": "^1.0.0",
+    "handlebars": "^4.0.5",
     "hbs": "~3.1.0",
+    "hogan.js": "^3.0.2",
     "knex": "^0.10.0",
     "morgan": "~1.6.1",
     "nodemailer": "^2.3.2",
