--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^2.3.2",
     "passport": "^0.3.2",
     "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^4.5.3",
     "sendgrid": "^2.0.0",
     "serve-favicon": "~2.3.0",
